# mai-studying

./: README.md
1-sem/computer-architecture-and-information-systems/: Железо.docx
1-sem/fundamental-computer-science/course-project-1/: КурсовойПроект_1.docx
1-sem/fundamental-computer-science/course-project-2/: КурсовойПроект_2.docx
1-sem/fundamental-computer-science/course-project-3/: CP3.c  КурсовойПроект_3.docx
1-sem/fundamental-computer-science/course-project-4/: CP4-20.c  CP4-21.c  КурсовойПроект_4.docx
1-sem/fundamental-computer-science/lab-10/: 10_Лабораторная_Отладчик_системы_программирования_ОС_Unix.docx
1-sem/fundamental-computer-science/lab-11/: 11_Лабораторная_Конечные_автоматы_Диаграммы_состояний_и_переходов.docx  Lab11.c
1-sem/fundamental-computer-science/lab-12/: 12_Лабораторная_Техника_работы_с_целыми_числами_Системы_счисления.docx  Lab12.c
1-sem/fundamental-computer-science/lab-13/: 13 Лабораторная (Множества).docx  Lab13.c
1-sem/fundamental-computer-science/lab-14/: 14_Лабораторная_Вложенные_циклы_с_параметрами_Обход_и_линеаризация.docx  Lab14.c
1-sem/fundamental-computer-science/lab-15/: 15_Лабораторная_Обработка_матриц.docx  Lab15.c
1-sem/mai-invaders-game/: MAI Invaders отчет.docx  README.md
2-sem/discrete-mathematics/: Концебалов_109Б_Коллоквиум.docx
3-sem/OOP (object-oriented-programming)/: README.md
3-sem/OS (operating-systems)/: README.md
4-sem/optimization-methods/: КонцебаловОС_2ЛР_Отчет.docx
5-sem/computer-graphics/lab-4/cg4/: CMakeLists.txt  main.cpp
5-sem/computer-graphics/lab-5/cg5/: CMakeLists.txt
5-sem/computer-graphics/lab-5/cg5/assets/shaders/: rt.frag
5-sem/computer-graphics/lab-5/cg5/src/: GLWrapper.cpp  SceneManager.cpp  SceneManager.h  main.cpp  scene.h
6-sem/cryptography/: КП_КонцебаловОлегСергеевич_309.docx  КП_КонцебаловОлегСергеевич_309.docx.asc
6-sem/data-bases/: БД_ЛР2_КонцебаловОС_309.docx
6-sem/functional-analysis/: RGR-1.py  RGR-2.py
6-sem/management/: Задание 3.1.docx  Задание 3.2.docx  Задание 4.1.docx  Задание 4.2.docx  Задание 5.1.docx  Задание 5.2.docx  Задание 5.3.docx  Задание 6.1.docx  Задание 6.2.docx  Задание 6.3.docx  Задание 6.4.docx  Итоговое домашнее задание.docx
6-sem/numeric-methods/: ЛР1_Концебалов_М8О-309Б-22.docx  ЛР2_Концебалов_М8О-309Б-22.docx  ЛР3_Концебалов_М8О-309Б-22.docx  ЛР4_Концебалов_М8О-309Б-22.docx
(+303 files in other folders)
